--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,9 +42,9 @@
               <li><%= link_to "Promoters", promoter_profiles_path %></li>
               <li><%= link_to "Help &Info", info_path %></li>
             </ul>
-            <form class="navbar-search pull-left">
+            <div class="navbar-search pull-left">
               <%= render 'events/search' %>
-            </form>
+            </div>
             <ul class="nav pull-right">
               <% unless user_signed_in? %>
                 <li><%= link_to "Sign up", new_user_registration_path %></li>
