--- a/app/views/promoter/events/show.html.erb
+++ b/app/views/promoter/events/show.html.erb
@@ -1,55 +1,69 @@
-<div class="page-header"><h3><%= @event.artist %> in <%= @event.venue %> on <%= time_tag @event.date %></h3></div>
-
-<h4>Customers</h4>
-<div class="btn-group">
-  <%= link_to "Home", promoter_root_path, class: "btn btn-medium" %>
-  <a href="#charge" role="button" class="btn btn-medium" data-toggle="modal">Charge all</a>
-  <%= link_to "PDF", promoter_event_path(@event, format: "pdf"), class: "btn btn-medium" %>
-</div>
-
-<div class="modal hide fade" id="charge" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
-    <h3>Are you sure?</h3>
-  </div>
-  <div class="modal-body">
-    <p>If you continue you will charge all your customers, the proceeds will be deposited into your bank account in seven days minus 100 Motel's and Stripe's fees which are <strong>non-refundable.</strong></p>
-    <p>If this is your first event please make sure you have read the <a href="">Terms and Conditions</a> and the <a href="">Getting started guide</a></p>
-    <p>We also strongly advise you to <a href="">sign a contract</a> with your Artists, a contract template is provided in the Getting started section.</p>
-  </div>
-  <div class="modal-footer">
-    <a href="#" class="btn" data-dismiss="modal">Cancel</a>
-    <a href="#" class="btn btn-primary">Charge All</a>
+<div class="row">
+  <div class="span12">
+    <div class="page-header">
+      <h3><%= @event.artist %> in <%= @event.venue %> on <%= time_tag @event.date %></h3>
+    </div>
   </div>
 </div>
+<div class="row">
+  <div class="span12">
+    <ul class=" nav nav-pills">
+      <li><%= link_to "All Events", promoter_root_path %></li>
+      <li><%= link_to "PDF", promoter_event_path(@event, format: "pdf") %></li>
+    </ul>
 
-<%= will_paginate @orders %>
+    <div class="modal hide fade" id="charge" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
+        <h3>Are you sure?</h3>
+      </div>
+      <div class="modal-body">
+        <p>If you continue you will charge all your customers, the proceeds will be deposited into your bank account in seven days minus 100 Motel's and Stripe's fees which are <strong>non-refundable.</strong></p>
+        <p>If this is your first event please make sure you have read the <a href="">Terms and Conditions</a> and the <a href="">Getting started guide</a></p>
+        <p>We also strongly advise you to <a href="">sign a contract</a> with your Artists, a contract template is provided in the Getting started section.</p>
+      </div>
+      <div class="modal-footer">
+        <a href="#" class="btn" data-dismiss="modal">Cancel</a>
+        <a href="#" class="btn btn-primary">Charge All</a>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="span12">
+    <%= will_paginate @orders %>
 
-<%= form_tag  charge_multiple_orders_path, method: :post  do %>
-  <%= hidden_field_tag "promoter", current_user.id %>
-  <table class="table table-striped table-bordered">
-    <thead>
-      <tr>
-        <th></th>
-        <th>Customer Name</th>
-        <th>Email</th>
-        <th>Admits:</th>
-        <th>Order Total</th>
-        <th colspan="1" >Status</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @orders.each do |order| %>
-      <tr>
-        <td><%= check_box_tag "order_ids[]", order.id %> </td>
-        <td><%= order.name %> </td>
-        <td><%= order.email %> </td>
-        <td> <%= order.quantity %></td>
-        <td> <%= number_to_currency(order.total(@event)) %></td>
-        <td> <span class="label label-warning"><%= order.stripe_event  %></span> </td>
-        <% end %>
-      </tr>
-    </tbody>
-  </table>
-  <%= submit_tag "Charge Selected" %>
-<% end %>
+    <%= form_tag  charge_multiple_orders_path, method: :post  do %>
+    <%= submit_tag "Charge Selected" %>
+      <%= hidden_field_tag "promoter", current_user.id %>
+      <table class="table table-striped table-bordered">
+        <thead>
+          <tr>
+            <th>
+              <button type="button" id="check_all", class="btn btn-mini">
+                <i class="icon-ok"></i>
+              </button>
+            </th>
+            <th>Customer Name</th>
+            <th>Email</th>
+            <th>Admits:</th>
+            <th>Order Total</th>
+            <th colspan="1" >Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @orders.each do |order| %>
+          <tr>
+            <td><%= check_box_tag "order_ids[]", order.id %> </td>
+            <td><%= order.name %> </td>
+            <td><%= order.email %> </td>
+            <td> <%= order.quantity %></td>
+            <td> <%= number_to_currency(order.total(@event)) %></td>
+            <td> <span class="label label-warning"><%= order.stripe_event  %></span> </td>
+            <% end %>
+          </tr>
+        </tbody>
+      </table>
+    <% end %>
+  </div>
+</div>
