--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -1,5 +1,9 @@
 <% if @event.state_cancelled? %>
-  <h3>This Event was cancelled, contact support to request reactivation or <%= link_to "create a new one", new_organizer_event_path %>.</h3>
+  <h3>This event was cancelled, contact support to request reactivation. </h3>
+
+  <%= link_to "new event", new_organizer_event_path, class: 'btn' %>
+  <%= link_to "admin", root_path, class: 'btn' %>
+
 <% else %>
   <div class="row-fluid">
     <div class="span12">
