--- a/app/views/order_mailer/event_deferred.text.erb
+++ b/app/views/order_mailer/event_deferred.text.erb
@@ -8,7 +8,7 @@ The Organizer of the Event gave the following reason:
 
 If you wish, you can cancel your order now by visiting this link:
 
-https:/www.100motels.com/cancel_order
+<%= cancel_order_url(@order.uuid) %>
 
 Thanks!
 
