--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -111,8 +111,8 @@
 .flex-video object,
 .flex-video embed {
   position: absolute;
-  top: 0;
-  left: 0;
+  // top: 0;
+  // left: 0;
   width: 100%;
   height: 100%;
 }
@@ -196,6 +196,8 @@ small {
   height: 40px;
 }
 
-.progress-bar {
+.progress-bar, .price, i {
   font-size: 20px;
 }
+
+
