--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -77,6 +77,7 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<div class="container">
+				<button class="btn edit-about">Edit</button>
 				<div class="event-media-html"><%= @event.about_section %></div>
 			</div>
 		</div>
